ViewModel and di class added