@@ -32,6 +32,12 @@ android {
         jvmTarget = '1.8'
     }
 
+    testOptions {
+        unitTests.all {
+            it.jvmArgs("-Djdk.attach.allowAttachSelf=true")
+        }
+    }
+
     buildFeatures {
         compose true
     }
@@ -41,11 +47,14 @@ android {
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            pickFirsts.add('META-INF/LICENSE.md')
+            pickFirsts.add('META-INF/LICENSE-notice.md')
         }
     }
 }
 
 dependencies {
+
     // Core and Lifecycle dependencies
     implementation "androidx.core:core-ktx:1.8.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -59,16 +68,24 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.navigation:navigation-compose:2.5.3" // Compatible with Compose
 
+    // Hilt dependencies
+    implementation 'com.google.dagger:hilt-android:2.44' // Compatible with Compose and Hilt
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0" // Compatible with Compose
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
+    //junit:junit:4.13.2
+    //androidx.compose.ui:ui-test-junit4
 
     // Core testing framework
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Additional testing libraries
-    androidTestImplementation 'org.mockito:mockito-core:4.8.0'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    //androidTestImplementation 'org.mockito:mockito-core:4.8.0'
+    //androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
 
-    androidTestImplementation 'io.mockk:mockk-android:1.12.0'
+    //testImplementation "io.mockk:mockk:1.13.3"
+    androidTestImplementation 'io.mockk:mockk-android:1.13.3'
 }
